--- a/Content.Client/HealthAnalyzer/UI/HealthAnalyzerWindow.xaml
+++ b/Content.Client/HealthAnalyzer/UI/HealthAnalyzerWindow.xaml
@@ -23,6 +23,7 @@
                         <RichTextLabel Name="NameLabel" SetWidth="150" />
                         <Label Name="SpeciesLabel" VerticalAlignment="Top" StyleClasses="LabelSubText" />
                     </BoxContainer>
+                    <Label Margin="0 0 5 0"  HorizontalExpand="True" HorizontalAlignment="Right" VerticalExpand="True" VerticalAlignment="Top" Name="ScanModeLabel" Text="{Loc 'health-analyzer-window-entity-unknown-text'}" />
                 </BoxContainer>
 
                 <PanelContainer StyleClasses="LowDivider" />
