--- a/Content.Client/HealthAnalyzer/UI/HealthAnalyzerWindow.xaml
+++ b/Content.Client/HealthAnalyzer/UI/HealthAnalyzerWindow.xaml
@@ -29,13 +29,13 @@
                 <PanelContainer StyleClasses="LowDivider" />
 
                 <GridContainer Margin="0 5 0 0" Columns="2">
-                    <Label StyleClasses="LabelKeyText" Text="{Loc 'health-analyzer-window-entity-status-text'}" />
+                    <Label Text="{Loc 'health-analyzer-window-entity-status-text'}" />
                     <Label Name="StatusLabel" />
-                    <Label StyleClasses="LabelKeyText" Text="{Loc 'health-analyzer-window-entity-temperature-text'}" />
+                    <Label Text="{Loc 'health-analyzer-window-entity-temperature-text'}" />
                     <Label Name="TemperatureLabel" />
-                    <Label StyleClasses="LabelKeyText" Text="{Loc 'health-analyzer-window-entity-blood-level-text'}" />
+                    <Label Text="{Loc 'health-analyzer-window-entity-blood-level-text'}" />
                     <Label Name="BloodLabel" />
-                    <Label StyleClasses="LabelKeyText" Text="{Loc 'health-analyzer-window-entity-damage-total-text'}" />
+                    <Label Text="{Loc 'health-analyzer-window-entity-damage-total-text'}" />
                     <Label Name="DamageLabel" />
                 </GridContainer>
             </BoxContainer>
