--- a/Content.Client/HealthAnalyzer/UI/HealthAnalyzerWindow.xaml
+++ b/Content.Client/HealthAnalyzer/UI/HealthAnalyzerWindow.xaml
@@ -1,9 +1,11 @@
-﻿<controls:FancyWindow
+<controls:FancyWindow
     xmlns="https://spacestation14.io"
     xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-    SetSize="300 430">
+    MaxHeight="525"
+    MinWidth="300">
     <ScrollContainer
         Margin="5 5 5 5"
+        ReturnMeasure="True"
         VerticalExpand="True">
         <BoxContainer
             Name="RootContainer"
@@ -23,7 +25,9 @@
                         <RichTextLabel Name="NameLabel" SetWidth="150" />
                         <Label Name="SpeciesLabel" VerticalAlignment="Top" StyleClasses="LabelSubText" />
                     </BoxContainer>
-                    <Label Margin="0 0 5 0"  HorizontalExpand="True" HorizontalAlignment="Right" VerticalExpand="True" VerticalAlignment="Top" Name="ScanModeLabel" Text="{Loc 'health-analyzer-window-entity-unknown-text'}" />
+                    <Label Margin="0 0 5 0" HorizontalExpand="True" HorizontalAlignment="Right" VerticalExpand="True"
+                           VerticalAlignment="Top" Name="ScanModeLabel"
+                           Text="{Loc 'health-analyzer-window-entity-unknown-text'}" />
                 </BoxContainer>
 
                 <PanelContainer StyleClasses="LowDivider" />
@@ -42,7 +46,8 @@
 
             <PanelContainer Name="AlertsDivider" Visible="False" StyleClasses="LowDivider" />
 
-            <BoxContainer Name="AlertsContainer" Visible="False" Margin="0 5" Orientation="Horizontal" HorizontalExpand="True" HorizontalAlignment="Center">
+            <BoxContainer Name="AlertsContainer" Visible="False" Margin="0 5" Orientation="Horizontal"
+                          HorizontalExpand="True" HorizontalAlignment="Center">
 
             </BoxContainer>
 
@@ -50,7 +55,7 @@
 
             <BoxContainer
                 Name="GroupsContainer"
-                Margin="0 5 0 0"
+                Margin="0 5 0 5"
                 Orientation="Vertical">
             </BoxContainer>
 
