--- a/Content.Client/Administration/UI/Tabs/PlayerTab/PlayerTabHeader.xaml
+++ b/Content.Client/Administration/UI/Tabs/PlayerTab/PlayerTabHeader.xaml
@@ -32,11 +32,11 @@
                Text="{Loc player-tab-antagonist}"
                MouseFilter="Pass"/>
         <cc:VSeparator/>
-        <Label Name="MindRoleLabel"
+        <Label Name="RoleTypeLabel"
                SizeFlagsStretchRatio="1"
                HorizontalExpand="True"
                ClipText="True"
-               Text="{Loc player-tab-mindrole}"
+               Text="{Loc player-tab-roletype}"
                MouseFilter="Pass"/>
         <cc:VSeparator/>
         <Label Name="PlaytimeLabel"
