--- a/Content.Client/UserInterface/Systems/Character/Windows/CharacterWindow.xaml
+++ b/Content.Client/UserInterface/Systems/Character/Windows/CharacterWindow.xaml
@@ -15,8 +15,8 @@
                 </BoxContainer>
                 <!-- TODO:ERRANT. LATER: fix vertical alignment, this looks horrible-->
                 <BoxContainer Orientation="Vertical" VerticalAlignment="Top" Margin="10, 0, 0, 0">
-                    <Label Name="MindRole" VerticalAlignment="Top" HorizontalAlignment="Left" StyleClasses="LabelHeading" Access="Public"/>
-                    <Label Name="MindRoleDetail" VerticalAlignment="Bottom" HorizontalAlignment="Left" Access="Public" StyleClasses="LabelSubText" />
+                    <Label Name="RoleType" VerticalAlignment="Top" HorizontalAlignment="Left" StyleClasses="LabelHeading" Access="Public"/>
+                    <Label Name="RoleTypeDetails" VerticalAlignment="Bottom" HorizontalAlignment="Left" Access="Public" StyleClasses="LabelSubText" />
                 </BoxContainer>
             </BoxContainer>
             <Label Name="ObjectivesLabel" Access="Public" Text="{Loc 'character-info-objectives-label'}" HorizontalAlignment="Center"/>
