--- a/Content.Client/CartridgeLoader/Cartridges/WantedListUiFragment.xaml
+++ b/Content.Client/CartridgeLoader/Cartridges/WantedListUiFragment.xaml
@@ -4,26 +4,30 @@
         VerticalExpand="True"
         HorizontalExpand="True">
 
-    <LineEdit Name="SearchBar" PlaceHolder="{Loc 'criminal-records-filter-placeholder'}"/>
+    <LineEdit Name="SearchBar" PlaceHolder="{Loc 'wanted-list-search-placeholder'}"/>
 
     <BoxContainer Orientation="Horizontal" HorizontalExpand="True" VerticalExpand="True">
         <Label Name="NoRecords" Text="{Loc 'wanted-list-label-no-records'}" Align="Center" VAlign="Center" HorizontalExpand="True" FontColorOverride="DarkGray"/>
 
-        <BoxContainer Orientation="Vertical" Visible="False">
+        <BoxContainer Name="RecordsListContainer" Orientation="Vertical" Visible="False">
             <ScrollContainer VerticalExpand="True" MinWidth="250" MaxWidth="300">
-                <ItemList Name="RecordsList" />
+                <ItemList Name="RecordsList" VerticalExpand="True" />
             </ScrollContainer>
         </BoxContainer>
 
-        <Label Name="RecordUnselected" Text="{Loc 'criminal-records-console-select-record-info'}" Align="Center" FontColorOverride="DarkGray" Visible="False"/>
-        <BoxContainer Name="PersonContainer" Orientation="Vertical" Margin="5">
-            <BoxContainer Orientation="Horizontal">
-                <Label Name="PersonName" StyleClasses="LabelBig" Align="Left"/>
-                <RichTextLabel Name="PersonState"/>
+        <Label Name="RecordUnselected"
+               Text="{Loc 'criminal-records-console-select-record-info'}"
+               Align="Center"
+               FontColorOverride="DarkGray"
+               Visible="False"
+               HorizontalExpand="True"/>
+        <BoxContainer Name="PersonContainer" Orientation="Vertical" HorizontalExpand="True" Margin="5">
+            <BoxContainer Orientation="Horizontal" HorizontalExpand="True">
+                <Label Name="PersonName" StyleClasses="LabelBig" />
+                <RichTextLabel Name="PersonState" HorizontalAlignment="Right" HorizontalExpand="True" />
             </BoxContainer>
             <PanelContainer StyleClasses="LowDivider" Margin="0 5 0 5"/>
-            <Label Name="InitiatorName"/>
-            <Label Name="WantedReason"/>
+            <RichTextLabel Name="WantedReason"/>
         </BoxContainer>
     </BoxContainer>
 </cartridges:WantedListUiFragment>
