--- a/Content.Client/UserInterface/Controls/CloseButton.xaml
+++ b/Content.Client/UserInterface/Controls/CloseButton.xaml
@@ -1,5 +1,4 @@
-<controls:CloseButton
+<TextureButton
     xmlns="https://spacestation14.io"
-    xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls">
-    
-</controls:CloseButton>
+    StyleClasses="windowCloseButton"
+    VerticalAlignment="Center" />
