--- a/Content.Client/CartridgeLoader/Cartridges/WantedListUiFragment.xaml
+++ b/Content.Client/CartridgeLoader/Cartridges/WantedListUiFragment.xaml
@@ -27,8 +27,13 @@
                 <RichTextLabel Name="PersonState" HorizontalAlignment="Right" HorizontalExpand="True" />
             </BoxContainer>
             <PanelContainer StyleClasses="LowDivider" Margin="0 5 0 5"/>
-            <ScrollContainer VerticalExpand="True">
+            <ScrollContainer VerticalExpand="True" HScrollEnabled="False">
                 <BoxContainer Name="DataContainer" Orientation="Vertical">
+                    <RichTextLabel Name="TargetAge" />
+                    <RichTextLabel Name="TargetJob" />
+                    <RichTextLabel Name="TargetSpecies" />
+                    <RichTextLabel Name="TargetGender" />
+                    <PanelContainer StyleClasses="LowDivider" Margin="0 5 0 5"/>
                     <RichTextLabel Name="InitiatorName" VerticalAlignment="Stretch"/>
                     <RichTextLabel Name="WantedReason" VerticalAlignment="Stretch"/>
                     <PanelContainer StyleClasses="LowDivider" Margin="0 5 0 5" />
