--- a/Content.Client/CartridgeLoader/Cartridges/WantedListUiFragment.xaml
+++ b/Content.Client/CartridgeLoader/Cartridges/WantedListUiFragment.xaml
@@ -37,6 +37,7 @@
                     <RichTextLabel Name="InitiatorName" VerticalAlignment="Stretch"/>
                     <RichTextLabel Name="WantedReason" VerticalAlignment="Stretch"/>
                     <PanelContainer StyleClasses="LowDivider" Margin="0 5 0 5" />
+                    <ScrollContainer Name="ScrollTableContainer" VerticalExpand="True" HorizontalExpand="True" />
                 </BoxContainer>
             </ScrollContainer>
         </BoxContainer>
