Go back to inlining the close button

--- a/Content.Client/UserInterface/Controls/FancyWindow.xaml
+++ b/Content.Client/UserInterface/Controls/FancyWindow.xaml
@@ -13,7 +13,10 @@
 
                 <Control Name="WindowControls" />
 
-                <controls:CloseButton Name="CloseButton" />
+                <TextureButton
+                    Name="CloseButton"
+                    StyleClasses="windowCloseButton"
+                    VerticalAlignment="Center" />
             </BoxContainer>
         </Control>
         <PanelContainer StyleClasses="LowDivider" />
