--- a/Content.Client/UserInterface/Controls/HelpButton.xaml
+++ b/Content.Client/UserInterface/Controls/HelpButton.xaml
@@ -1,5 +1,6 @@
 <controls:HelpButton
     xmlns="https://spacestation14.io"
     xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls">
-    
+    <TextureButton Name="Button" StyleClasses="windowHelpButton" VerticalAlignment="Center" Disabled="True"
+                   Visible="False" />
 </controls:HelpButton>
