Remove generic header control support for simpler hard-coding

--- a/Content.Client/UserInterface/Controls/FancyWindow.xaml
+++ b/Content.Client/UserInterface/Controls/FancyWindow.xaml
@@ -11,7 +11,7 @@
                 <Label Name="WindowTitle"
                        HorizontalExpand="True" VAlign="Center" StyleClasses="FancyWindowTitle" />
 
-                <Control Name="WindowControls" />
+                <controls:HelpButton Name="HelpButton" Access="Public" />
 
                 <TextureButton
                     Name="CloseButton"
