--- a/Content.Client/UserInterface/Systems/Chat/Controls/ChannelFilterPopup.xaml
+++ b/Content.Client/UserInterface/Systems/Chat/Controls/ChannelFilterPopup.xaml
@@ -5,7 +5,7 @@
         <BoxContainer Orientation="Horizontal">
             <Control MinSize="4 0"/>
             <BoxContainer Name="FilterVBox" MinWidth="210" Margin="0 10" Orientation="Vertical" SeparationOverride="4">
-                <LineEdit Name="HighlightEdit" PlaceHolder="Words to highlight..."/>
+                <LineEdit Name="HighlightEdit" PlaceHolder="{Loc 'hud-chatbox-highlights-placeholder'}" ToolTip="{Loc 'hud-chatbox-highlights-tooltip'}"/>
             </BoxContainer>
         </BoxContainer>
     </PanelContainer>
