--- a/Content.Client/Voting/UI/VoteCallMenu.xaml
+++ b/Content.Client/Voting/UI/VoteCallMenu.xaml
@@ -1,4 +1,4 @@
-﻿<ui:VoteCallMenu xmlns="https://spacestation14.io"
+<ui:VoteCallMenu xmlns="https://spacestation14.io"
                  xmlns:ui="clr-namespace:Content.Client.Voting.UI"
                  xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
                  MouseFilter="Stop" MinSize="350 150">
@@ -16,7 +16,10 @@
             <BoxContainer Orientation="Horizontal">
                 <OptionButton Name="VoteTypeButton" HorizontalExpand="True" />
                 <Control HorizontalExpand="True">
-                    <OptionButton Name="VoteSecondButton" Visible="False" />
+                    <OptionButton Margin="8 2" Name="VoteSecondButton" Visible="False" />
+                </Control>
+                <Control HorizontalExpand="True">
+                    <OptionButton Name="VoteThirdButton" Visible="False" />
                 </Control>
             </BoxContainer>
             <Label Name="VoteTypeTimeoutLabel" Visible="False" />
