--- a/Content.Client/Xenobiology/UI/CellularFusionWindow.xaml
+++ b/Content.Client/Xenobiology/UI/CellularFusionWindow.xaml
@@ -8,7 +8,7 @@
         <!-- Nav panel -->
         <BoxContainer Margin="8" MinWidth="175" Orientation="Vertical" VerticalExpand="True">
             <Button Name="SyncButton"
-                    Text="{Loc 'cell-sequencer-menu-sync-button'}"
+                    Text="{Loc 'cellular-fusion-menu-sync-button'}"
                     ToolTip="{Loc 'cell-sequencer-menu-sync-tooltip-info'}"
                     Margin="0 0 0 4" />
 
@@ -18,6 +18,8 @@
                     Text="{Loc 'cellular-fusion-menu-splice-button'}"
                     ToolTip="{Loc 'cell-sequencer-menu-add-tooltip-info'}"
                     Margin="0 0 0 4" />
+
+            <customControls:HSeparator Margin="0 0 0 4" StyleClasses="LowDivider" />
 
             <Label Name="MaterialLabel" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
         </BoxContainer>
@@ -30,7 +32,13 @@
                 <PanelContainer.PanelOverride>
                     <graphics:StyleBoxFlat BackgroundColor="#000000FF" />
                 </PanelContainer.PanelOverride>
-                <BoxContainer Name="FirstCellContainer" Orientation="Vertical" />
+
+                <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True">
+                    <Label Margin="0 0 0 2" Text="{Loc 'cellular-fusion-menu-cell-a-label'}" HorizontalAlignment="Center" />
+                    <customControls:HSeparator Margin="8 0" StyleClasses="LowDivider" />
+                    <BoxContainer Name="CellContainerA" Orientation="Vertical" />
+                </BoxContainer>
+
             </PanelContainer>
         </ScrollContainer>
 
@@ -43,7 +51,10 @@
                     <graphics:StyleBoxFlat BackgroundColor="#000000FF" />
                 </PanelContainer.PanelOverride>
 
-                <Label Name="NoSelectedLabel" Text="{Loc 'cell-sequencer-menu-no-selected-label'}" FontColorOverride="#ff0000" Align="Center"/>
+                <BoxContainer Orientation="Vertical" Align="Center">
+                    <Label Name="CellANoSelectedLabel" Text="{Loc 'cellular-fusion-menu-cell-a-no-selected-label'}" FontColorOverride="#ff0000" HorizontalAlignment="Center" />
+                    <Label Name="CellBNoSelectedLabel" Text="{Loc 'cellular-fusion-menu-cell-b-no-selected-label'}" FontColorOverride="#ff0000" HorizontalAlignment="Center" />
+                </BoxContainer>
 
                 <BoxContainer Name="CellInfoContainer" Orientation="Vertical" HorizontalExpand="True" VerticalExpand="True" Margin="8" Visible="False">
                     <Label Name="CellNameLabel"/>
@@ -68,7 +79,13 @@
                 <PanelContainer.PanelOverride>
                     <graphics:StyleBoxFlat BackgroundColor="#000000FF" />
                 </PanelContainer.PanelOverride>
-                <BoxContainer Name="SecondCellContainer" Orientation="Vertical" />
+
+                <BoxContainer Orientation="Vertical" VerticalExpand="True" HorizontalExpand="True">
+                    <Label Margin="0 0 0 2" Text="{Loc 'cellular-fusion-menu-cell-b-label'}" HorizontalAlignment="Center" />
+                    <customControls:HSeparator Margin="8 0" StyleClasses="LowDivider" />
+                    <BoxContainer Name="CellContainerB" Orientation="Vertical" />
+                </BoxContainer>
+
             </PanelContainer>
         </ScrollContainer>
     </BoxContainer>
