--- a/Content.Client/Voting/UI/VoteCallMenu.xaml
+++ b/Content.Client/Voting/UI/VoteCallMenu.xaml
@@ -1,7 +1,7 @@
 <ui:VoteCallMenu xmlns="https://spacestation14.io"
                  xmlns:ui="clr-namespace:Content.Client.Voting.UI"
                  xmlns:controls="clr-namespace:Content.Client.UserInterface.Controls"
-                 MouseFilter="Stop" MinSize="350 150">
+                 MouseFilter="Stop" MinSize="350 200">
     <PanelContainer StyleClasses="AngleRect" />
     <BoxContainer Orientation="Vertical">
         <BoxContainer Margin="8 0" Orientation="Horizontal">
@@ -13,14 +13,12 @@
         <controls:HighDivider />
 
         <BoxContainer Orientation="Vertical" Margin="8 2 8 0" VerticalExpand="True" VerticalAlignment="Top">
-            <BoxContainer Orientation="Horizontal">
-                <OptionButton Name="VoteTypeButton" HorizontalExpand="True" />
-                <Control HorizontalExpand="True">
-                    <OptionButton Margin="8 2" Name="VoteSecondButton" Visible="False" />
+            <BoxContainer Orientation="Vertical">
+                <OptionButton Margin="0 2" Name="VoteTypeButton" HorizontalExpand="False" />
+                <Control Name="VoteOptionsButtonContainer" HorizontalExpand="False">
                 </Control>
-                <Control HorizontalExpand="True">
-                    <OptionButton Name="VoteThirdButton" Visible="False" />
-                </Control>
+                <Label Name="VoteNotTrustedLabel" Text="{Loc 'This vote option is only available for trusted users. (Loc required)'}" Visible="False" />
+                <Label Name="VoteWarningLabel" Text="{Loc 'Warning: Abuse of the votekick system may result in a permanent ban! (Loc required)'}" Visible="False" />
             </BoxContainer>
             <Label Name="VoteTypeTimeoutLabel" Visible="False" />
         </BoxContainer>
